@@ -2,6 +2,8 @@ package cn.irving.zhao.util.poi.formatter;
 
 import org.apache.commons.collections4.map.ReferenceMap;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * 工作表名称格式化对象工厂
  */
@@ -9,7 +11,7 @@ public class FormatterFactory<T> {
     private FormatterFactory() {
     }
 
-    private final ReferenceMap FORMATTERCACHE = new ReferenceMap();
+    private final ReferenceMap FORMATTER_CACHE = new ReferenceMap();
 
     private static final FormatterFactory me = new FormatterFactory();
 
@@ -20,16 +22,16 @@ public class FormatterFactory<T> {
     public T getFormatter(Class<? extends T> clazz) {
         T result = null;
         try {
-            result = (T) me.FORMATTERCACHE.get(clazz.getName());
+            result = (T) me.FORMATTER_CACHE.get(clazz.getName());
         } catch (Exception e) {//类型转换异常
             e.printStackTrace();
         }
         if (result == null) {
             synchronized (me) {
                 try {
-                    result = clazz.newInstance();
-                    me.FORMATTERCACHE.put(clazz.getName(), result);
-                } catch (InstantiationException | IllegalAccessException e) {
+                    result = clazz.getDeclaredConstructor().newInstance();
+                    me.FORMATTER_CACHE.put(clazz.getName(), result);
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                     e.printStackTrace();
                 }
             }
